 Bug 419059 -  contentAccess accesskeys for elements hidden with CSS don't work, r=neil, sr=roc, a=jst